#some changes in img tag

--- a/MB_Presentation_MVCCore/Pages/ArticleDetails.cshtml
+++ b/MB_Presentation_MVCCore/Pages/ArticleDetails.cshtml
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="post-single">
             <div class="post-thumbnail">
-                <img src="~/@Model.Article.Image" alt="@Model.Article.Title" title="@Model.Article.Title" class="img-fluid">
+                <img src="~/img/@Model.Article.Image" alt="@Model.Article.Title" title="@Model.Article.Title" class="img-fluid">
             </div>
             <div class="post-details">
                 <div class="post-meta d-flex justify-content-between">
