--- a/MB_Presentation_MVCCore/Pages/Index.cshtml
+++ b/MB_Presentation_MVCCore/Pages/Index.cshtml
@@ -13,7 +13,7 @@
                 <div class="post col-xl-6">
                     <div class="post-thumbnail">
                         <a asp-page="/ArticleDetails" asp-route-id="@article.Id">
-                            <img src="@article.Image" alt="@article.Title" title="@article.Title" class="img-fluid">
+                            <img style="height:230px; width:540px;" src="img/@article.Image" alt="@article.Title" title="@article.Title" class="img-fluid">
                         </a>
                     </div>
                     <div class="post-details">
